> Añadidos campos estado y consulta